# bensherif

./: .gitignore  Makefile  README.md  bch.sh  bensherif.opam  cyclic.ml  dune-project  lst.ml  option.ml
src/: dune  implem.ml  shell.ml
tests/: cy.ml  option.ml
tests/lists/: dune  results.data  results_bshf0.data  results_bshf1.data  results_bshf2.data  results_bshf3.data  test.ml
