opam-version: "2.0"
maintainer: "Ghiles Ziat <ghiles.ziat@lip6.fr>"
authors: [
  "Ghiles Ziat <ghiles.ziat@lip6.fr>"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {build}
  "ocaml" {>= "4.03"}
]

synopsis: "My bencher"

description: "Bensherif is a tool that aims at comparing the performances (time-wise and memory-wise) of two functionnaly equivalent implementations"
